--- a/T3kCfg/Languages/chinese.txt
+++ b/T3kCfg/Languages/chinese.txt
@@ -5,32 +5,32 @@ TITLE_GENERAL_ERROR = 錯誤
 
 BTN_CAPTION_EXIT = 退出
 BTN_CAPTION_CLOSE = 關閉
-BTN_CAPTION_DEFAULT = 缺省
-BTN_CAPTION_REFRESH = 更新
+BTN_CAPTION_DEFAULT = 默认
+BTN_CAPTION_REFRESH = 刷新
 MENU_TOOLTIP_START_PAGE = 起始頁
 MENU_TOOLTIP_MOUSE = 手勢
 MENU_TOOLTIP_CALIBRATION = 校準
 MENU_TOOLTIP_SENSOR_SETTING = 設置
-MENU_TOOLTIP_GENERAL_SETTING = 
-MENU_TOOLTIP_SOFTKEY_SETTING = 
-MSGBOX_TITLE_DEFAULT = 變更缺省值
-MSGBOX_TEXT_DEFAULT = 恢復到最初缺省嗎？
-MSGBOX_TEXT_INVALID_FIRMWARE_VERSION = 無效的固件版本。\n當前固件版本: %1\n支持固件版本: %2 ~ %3
+MENU_TOOLTIP_GENERAL_SETTING = 常规设置
+MENU_TOOLTIP_SOFTKEY_SETTING = 功能键设置
+MSGBOX_TITLE_DEFAULT = 返回到默認
+MSGBOX_TEXT_DEFAULT = 恢复到原来的设置吗？
+MSGBOX_TEXT_INVALID_FIRMWARE_VERSION = 这个程序不支持v%1固件.当前固件版本是\n: %1,支持固件版本是\n: %2 ~ %3
 MSGBOX_TITLE_INVALID_FIRMWARE_VERSION = 確認錯誤
 TITLE_CAPTION_INFORMATION = 程序信息
 TITLE_CAPTION_FIRMWARE = 固件信息
-TEXT_DEVICE_NOT_CONNECTED = 没有連接設備
+TEXT_DEVICE_NOT_CONNECTED = 设备未连接
 TEXT_FIRMWARE_DOWNLOAD = 下載固件
 
-TITLE_CAPTION_LICENSE = 
+TITLE_CAPTION_LICENSE = 關於
 
 [SELECT DEVICE]
 WINDOW_CAPTION = 選擇設備
-TITLE_CAPTION_DEVICE_LIST = 設備目錄
-TEXT_DEV_PATH = 路徑
-TEXT_MODEL = 
-TEXT_NUMBER = 
-BTN_CAPTION_PLAY_BUZZER = 播放蜂音器
+TITLE_CAPTION_DEVICE_LIST = 設備列表
+TEXT_DEV_PATH = 路徑
+TEXT_MODEL = 型号
+TEXT_NUMBER = 序列号
+BTN_CAPTION_PLAY_BUZZER = 播放蜂鸣器
 BTN_CAPTION_SELECT = 選擇設備
 
 [MESSAGEBOX]
@@ -41,18 +41,18 @@ BTN_CAPTION_NO = 否
 
 [START PAGE]
 BTN_CAPTION_MOUSE = 手勢
-BTN_CAPTION_MOUSE_SUB1 = 設定觸摸手勢
-BTN_CAPTION_MOUSE_SUB2 = 設定手勢輪廓
-BTN_CAPTION_CALIBRATION = 校準觸摸屏
-BTN_CAPTION_CALIBRATION_SUB1 = 校準觸摸屏工具
+BTN_CAPTION_MOUSE_SUB1 = 触摸手势设置
+BTN_CAPTION_MOUSE_SUB2 = 手势配置文件
+BTN_CAPTION_CALIBRATION = 触摸坐标更正
+BTN_CAPTION_CALIBRATION_SUB1 = 触摸坐标更正工具
 BTN_CAPTION_CALIBRATION_SUB2 = 
-BTN_CAPTION_SENSOR_SETTING = 傳感器設備
-BTN_CAPTION_SENSOR_SETTING_SUB1 = 觸摸屏有效/無效
-BTN_CAPTION_SENSOR_SETTING_SUB2 = 設定聲音，快捷鍵
-BTN_CAPTION_GENERAL_SETTING = 一般設備
-BTN_CAPTION_GENERAL_SETTING_SUB1 = 設定语言, 輸入模式
+BTN_CAPTION_SENSOR_SETTING = 傳感器設置
+BTN_CAPTION_SENSOR_SETTING_SUB1 = 启用/禁用触摸
+BTN_CAPTION_SENSOR_SETTING_SUB2 = 声音、快捷键设置
+BTN_CAPTION_GENERAL_SETTING = 常规設置
+BTN_CAPTION_GENERAL_SETTING_SUB1 = 語言、输入模式
 BTN_CAPTION_GENERAL_SETTING_SUB2 = 顯示方向
-BTN_CAPTION_REMOTE_ASSISTANCE = 遠程支持
+BTN_CAPTION_REMOTE_ASSISTANCE = 遠程协助
 BTN_CAPTION_REMOTE_ASSISTANCE_SUB1 = 
 BTN_CAPTION_REMOTE_ASSISTANCE_SUB2 = 
 BTN_CAPTION_SOFTKEY_SETTING = Softkey
@@ -61,23 +61,23 @@ BTN_CAPTION_SOFTKEY_SETTING_SUB2 =
 
 [MOUSE SETTING]
 TITLE_CAPTION_MOUSE_BUTTON_MAPPING = 觸摸手勢
-BTN_CAPTION_TOUCH_SETTING = 設定觸摸...
+BTN_CAPTION_TOUCH_SETTING = 觸摸設置...                                            
 
-;TEXT_SINGLE = 單手
-;TEXT_FINGERS = 手指
+;TEXT_SINGLE = 單指
+;TEXT_FINGERS = 多指
 ;TEXT_PALM = 手掌
 ;TEXT_PUTNTAP = Put&Tap
 ;TEXT_DRAG = 拖動
-;TEXT_TAP = 敲
-;TEXT_DOUBLE_TAP = 敲兩次(快速連續按两次按鈕)
+;TEXT_TAP = 单击
+;TEXT_DOUBLE_TAP = 雙击
 ;TEXT_LONG_TAP = 長時間按按鈕
 ;TEXT_ROTATE = 旋轉
 ;TEXT_ZOOM = 放大/縮小
 TEXT_MOVE_WITH_ZOOM = 移動中可放大/縮小
 TEXT_INERTIAL_WHEEL = 慣性論
 TEXT_INDIVIDUAL_PUTNTAP_DOUBLE_TAP = 單獨執行 Put&Tap與 Put&Double-Tap
-TEXT_PUTAND_ON_MULTITOUCHDEVICE = 
-TEXT_MAC_OS_MARGIN = 
+TEXT_PUTAND_ON_MULTITOUCHDEVICE = 在多点触摸模式下使用手势识别
+TEXT_MAC_OS_MARGIN = Mac OS X 的边缘
 TEXT_INVERT_WHEEL = 反轉輪
 
 TEXT_LEFT = 左
@@ -86,14 +86,14 @@ TEXT_MIDDLE = 中間
 TEXT_DOUBLE_CLICK = 雙擊
 TEXT_CLICK = 單擊
 
-TEXT_PROFILE_LEGEND_MODE1 = 
-TEXT_PROFILE_LEGEND_MODE2 = 
+TEXT_PROFILE_LEGEND_MODE1 = Mouse
+TEXT_PROFILE_LEGEND_MODE2 = Windows 7
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = 編輯項目
 TEXT_PROFILE_ITEM = 項目
 TEXT_ACTION = 動作
-TEXT_USER_DEFINE_KEY = 用戶定義的鍵盤
+TEXT_USER_DEFINE_KEY = 用戶定義鍵
 TEXT_KEY = 鍵盤
 TEXT_FUNCTION_KEY = 功能鍵
 TEXT_NONE = 没有
@@ -108,51 +108,51 @@ TEXT_PROFILE_ITEM_MOUSE =
 TEXT_PROFILE_ITEM_ESCAPE = 
 TEXT_PROFILE_ITEM_FORWARD = 向前
 TEXT_PROFILE_ITEM_BACK = 向後
-TEXT_PROFILE_ITEM_TASK_SWITCH1 = 轉換1工作窗
-TEXT_PROFILE_ITEM_TASK_SWITCH2 = 轉換2工作窗
-TEXT_PROFILE_ITEM_TASK_MANAGER = 工作管理員
-TEXT_PROFILE_ITEM_EXPLORER = 執行資源管理器
-TEXT_PROFILE_ITEM_DESKTOP = 顯示桌面
-TEXT_PROFILE_ITEM_VKBOARD = 
-TEXT_PROFILE_ITEM_T3KCFG = 
+TEXT_PROFILE_ITEM_TASK_SWITCH1 = 任务切换器
+TEXT_PROFILE_ITEM_TASK_SWITCH2 = 任务切换器（Aero）
+TEXT_PROFILE_ITEM_TASK_MANAGER = 任务管理器
+TEXT_PROFILE_ITEM_EXPLORER = 探險者
+TEXT_PROFILE_ITEM_DESKTOP = 桌面
+TEXT_PROFILE_ITEM_VKBOARD = 虚拟键盘
+TEXT_PROFILE_ITEM_T3KCFG = T3k系列配置程序
 
-TEXT_PROFILE_ITEM_MLEFT_CLICK = 
-TEXT_PROFILE_ITEM_MRIGHT_CLICK = 
-TEXT_PROFILE_ITEM_MMIDDLE_CLICK = 
-TEXT_PROFILE_ITEM_MLEFT_DOWN = 
-TEXT_PROFILE_ITEM_MRIGHT_DOWN = 
-TEXT_PROFILE_ITEM_MMIDDLE_DOWN = 
+TEXT_PROFILE_ITEM_MLEFT_CLICK = 点击左键
+TEXT_PROFILE_ITEM_MRIGHT_CLICK = 点击右键
+TEXT_PROFILE_ITEM_MMIDDLE_CLICK = 点击中键
+TEXT_PROFILE_ITEM_MLEFT_DOWN = 左键
+TEXT_PROFILE_ITEM_MRIGHT_DOWN = 右键
+TEXT_PROFILE_ITEM_MMIDDLE_DOWN = 中间按钮
 
 [CALIBRATION SETTING]
 TITLE_CAPTION_CALIBRATION = 校準
 TEXT_SCREEN_MARGIN = 屏幕邊緣
 TEXT_SCREEN_PERCENT_OF_SCREEN = %
-TEXT_CALIBRATE = 校準
-BTN_CAPTION_CALIBRATE = 校準...
+TEXT_CALIBRATE = 校正
+BTN_CAPTION_CALIBRATE = 校正…                                                        
 
-TITLE_AREA_SETTING = 設定領域
-TEXT_SINGLE_CLICK = 單擊
-TEXT_DOUBLE_CLICK = 雙擊
+TITLE_AREA_SETTING = 区域设置（%）
+TEXT_SINGLE_CLICK = 
+TEXT_DOUBLE_CLICK = 單擊
 ;TEXT_TWO_TOUCH = Put & Tap
 TEXT_PALM = 手掌
 
-TEXT_CALIBRATION_WARNING = 
-TEXT_CALIBRATION_WARNING2 = 
+TEXT_CALIBRATION_WARNING = “Mac OS X的边缘 ”在“手势”菜单里没有设置成功。 校正无法正常工作。
+TEXT_CALIBRATION_WARNING2 = “Mac OS X的边缘 ”在“手势”菜单里设置成功。 校正无法正常工作。
 
 [SETTING]
-TITLE_CAPTION_TOUCH_ENABLE = 是否使用觸摸
+TITLE_CAPTION_TOUCH_ENABLE = 打开/关闭触摸屏
 TEXT_TOUCH_ENABLE = 使用觸摸
-TEXT_RADIO_TOUCH_ENABLE = 有效
-TEXT_RADIO_TOUCH_DISABLE = 無效
+TEXT_RADIO_TOUCH_ENABLE = 启用
+TEXT_RADIO_TOUCH_DISABLE = 不启用
 
-TITLE_CAPTION_BUZZER = 警報蜂鳴聲
+TITLE_CAPTION_BUZZER = 蜂鳴器
 TEXT_CLICK = 單擊
 TEXT_CALIBRATION = 校準
 TEXT_ERROR = 錯誤
 TEXT_KEYTONE = 鍵盤音
-TEXT_SENSOR_ATTACH = 通知傳感器的連接
-TEXT_PEN_PAIRING = Pen pairing
-TEXT_USB_ATTACH = 通知USB連接
+TEXT_SENSOR_ATTACH = 通知傳感器的連接
+TEXT_PEN_PAIRING = 笔配对
+TEXT_USB_ATTACH = 通知USB連接
 
 TITLE_SHORTCUT_KEY = 快捷鍵
 TEXT_CALIBRATION_KEY = 校準鍵
@@ -163,20 +163,20 @@ TEXT_NOT_USED = 不使用
 TEXT_ON = 開機
 TEXT_OFF = 關閉
 
-TITLE_TRAY_ICON = Tray Icon
-TEXT_CHECK_TRAYICON = 使用托盤圖標（Tray Icon）
+TITLE_TRAY_ICON = 任务栏图标
+TEXT_CHECK_TRAYICON = 使用任务栏图标
 
-TITLE_CAPTION_TOUCH_INPUT_MODE = 輸入模式
+TITLE_CAPTION_TOUCH_INPUT_MODE = 觸摸輸入模式
 TEXT_INPUT_MODE = 輸入模式
 TEXT_INPUT_MODE_MOUSE = 鼠標
-TEXT_INPUT_MODE_SINGLE_TOUCH = 單點觸摸輸入 (Tablet Pen)
-TEXT_INPUT_MODE_MULTI_TOUCH = 多點觸摸輸入
+TEXT_INPUT_MODE_SINGLE_TOUCH = 單點觸摸 (Tablet Pen)
+TEXT_INPUT_MODE_MULTI_TOUCH = 多點觸摸
 TEXT_INPUT_MODE_AUTO_SELECT = 自動選擇
-TEXT_INPUT_MODE_WARNING_MSG = 觸摸可能無法正常工作在其他操作系統。繼續嗎？
+TEXT_INPUT_MODE_WARNING_MSG = 在其他操作系统觸摸可能無法正常工作。要繼續嗎？
 
-TITLE_MULTI_MONITOR = 設定多顯示器
-TEXT_MULTI_MONITOR = 設定顯示器
-TEXT_MULTI_MONITOR_SETTING = 選擇顯示器
+TITLE_MULTI_MONITOR = 多顯示器多顯設置
+TEXT_MULTI_MONITOR = 顯示器設置
+TEXT_MULTI_MONITOR_SETTING = 選擇顯示器...
 
 TEXT_BTN_MULTI_MONITOR_APPLY = 運用
 TEXT_BTN_MULTI_MONITOR_CANCEL = 取消
@@ -188,87 +188,87 @@ BTN_TOOLTIP_PLAY = 播放
 
 BTN_CAMERA_DIAGNOSTICS = 診斷傳感器...
 
-TITLE_LANGUAGE = 設定語言(Language)
+TITLE_LANGUAGE = 語言
 TEXT_LANGUAGE = 選擇語言
 TEXT_LANGUAGE_NOT_FOUND = 語言文件不存在
 
 TITLE_DISPLAY_ORIENTATION = 顯示方向
 TEXT_DISPLAY_ORIENTATION = 方向
-TEXT_DISPLAY_ORIENTATION_1 = 0' - 景觀
-TEXT_DISPLAY_ORIENTATION_2 = 90' - 肖像
-TEXT_DISPLAY_ORIENTATION_3 = 180' - 景觀 (翻轉)
-TEXT_DISPLAY_ORIENTATION_4 = 270' - 肖像 (翻轉)
+TEXT_DISPLAY_ORIENTATION_1 = 0' - 横向
+TEXT_DISPLAY_ORIENTATION_2 = 0' - 竖向
+TEXT_DISPLAY_ORIENTATION_3 = 180' - 横向 (翻轉)
+TEXT_DISPLAY_ORIENTATION_4 = 270' - 竖向  (翻转)
 
-TEXT_DISPLAY_X11_ORIENTATION_1 = 
-TEXT_DISPLAY_X11_ORIENTATION_2 = 
-TEXT_DISPLAY_X11_ORIENTATION_3 = 
-TEXT_DISPLAY_X11_ORIENTATION_4 = 
+TEXT_DISPLAY_X11_ORIENTATION_1 = 0' - 正常
+TEXT_DISPLAY_X11_ORIENTATION_2 = 90' - 左边
+TEXT_DISPLAY_X11_ORIENTATION_3 = 180' - 右边
+TEXT_DISPLAY_X11_ORIENTATION_4 = 270' - 颠倒
 
-TEXT_DISPLAY_MAC_ORIENTATION_1 = 
-TEXT_DISPLAY_MAC_ORIENTATION_2 = 
-TEXT_DISPLAY_MAC_ORIENTATION_3 = 
-TEXT_DISPLAY_MAC_ORIENTATION_4 = 
+TEXT_DISPLAY_MAC_ORIENTATION_1 = 0'
+TEXT_DISPLAY_MAC_ORIENTATION_2 = 90'
+TEXT_DISPLAY_MAC_ORIENTATION_3 = 180'
+TEXT_DISPLAY_MAC_ORIENTATION_4 = 270'
 
 TITLE_DISPLAY_WARNING = 警告
 TEXT_DISPLAY_WARNING = 當前顯示的方向和校準值不符合
 
 [TOUCH SETTING]
-WINDOW_CAPTION = 設定觸摸
-TITLE_TIME_SETTING = 設定時間(ms)
+WINDOW_CAPTION = 觸摸設置
+TITLE_TIME_SETTING = 時間設置(ms)
 TEXT_TAP = 按
 TEXT_LONG_TAP = 長時間按按鈕
 TEXT_SLOW = 慢
 TEXT_FAST = 快
-TITLE_WHEEL_SENSITIVITY_SETTING = 放大/縮小鼠標滾輪,設定敏感度
-TEXT_WHEEL = 鼠標滾輪
+TITLE_WHEEL_SENSITIVITY_SETTING = 放大/缩小鼠标滚轮,灵敏度设置
+TEXT_WHEEL = 鼠標滾輪
 TEXT_ZOOM = 放大/縮小
 
-BTN_CAPTION_DEFAULT = 缺省
-BTN_CAPTION_REFRESH = 更新
+BTN_CAPTION_DEFAULT = 默认值
+BTN_CAPTION_REFRESH = 刷新
 BTN_CAPTION_CLOSE = 關閉
-MSGBOX_TEXT_DEFAULT = 恢復到最初缺省嗎？
-MSGBOX_TITLE_DEFAULT = 變更缺省值
+MSGBOX_TEXT_DEFAULT = 恢复到原来的设置吗?
+MSGBOX_TITLE_DEFAULT = 确认原来的设置
 
 [CHECK TOUCH DISABLE]
-TITLE_CAPTION = 確認觸摸無效
-TEXT_MESSAGE = 觸摸無效時,需要鼠標。\n请用鼠標按下鍵。
+TITLE_CAPTION = 確認關閉觸摸
+TEXT_MESSAGE = 關閉觸摸時需要鼠標。\n请用鼠標点击下面按鍵
 BTN_TIMER_TEXT = %1 秒
 
 [WARNING SENSOR DIAGNOSIS]
 TITLE_CAPTION = 警告
-TEXT_MESSAGE = 警告！下次屏幕上，包含診斷傳感器狀態的設定值。\n\n若變更設定值，傳感器可能會不稳定動作。
+TEXT_MESSAGE = 警告！下一个画面包含，为了诊断传感器状态的设置数据。\n\n如果变更设置数据，触摸屏无法正常工作。
 BTN_CAPTION_CONTINUE = 繼續
 BTN_CAPTION_CLOSE = 關閉
 
 [INFORMATION GATHERING]
-TITLE_CAPTION = 
-TEXT_MESSAGE = 
-BTN_CAPTION_CONTINUE = 
-BTN_CAPTION_CLOSE = 
+TITLE_CAPTION = 同意
+TEXT_MESSAGE = 下一个画面收集传感器信息和使用者环境（操作系统版本，在MS Windows Tablet輸入服務，屏幕分辨率）
+BTN_CAPTION_CONTINUE = 同意
+BTN_CAPTION_CLOSE = 拒绝
 
 [SENSOR DIAGNOSIS]
 TITLE_CAPTION = 傳感器診斷工具
-BTN_CAPTION_DEFAULT = 缺省
-BTN_CAPTION_REFRESH = 更新
+BTN_CAPTION_DEFAULT = 默认值
+BTN_CAPTION_REFRESH = 刷新
 BTN_CAPTION_CLOSE = 關閉
-BTN_CAPTION_SAVELOG = 
-BTN_CAPTION_MAIN = 
-BTN_CAPTION_SUB = 
+BTN_CAPTION_SAVELOG = 保存传感器状态
+BTN_CAPTION_MAIN = 主
+BTN_CAPTION_SUB = 副
 TAB_CAPTION_SIDEVIEW = 側視圖
 TAB_CAPTION_DETECTION = 檢測圖
 
-LOG_CAPTION_ERROR = 
-LOG_SIDEVIEW = 
-LOG_DETECTION = 
-LOG_DATA = 
-LOG_SAVING = 
-LOG_LOADING = 
-LOG_COMPLETE = 
-LOG_OK = 
-LOG_FAIL = 
-LOG_PROGRESS = 
-LOG_START = 
-LOG_CAMERA = 
+LOG_CAPTION_ERROR = 错误！保存失败
+LOG_SIDEVIEW = 側視圖
+LOG_DETECTION = 檢測
+LOG_DATA = 设置数据
+LOG_SAVING = 保存中
+LOG_LOADING = 加载中
+LOG_COMPLETE = 完成
+LOG_OK = 確認
+LOG_FAIL = 失败
+LOG_PROGRESS = 進行
+LOG_START = 開始
+LOG_CAMERA = 相机
 
 TITLE_SENSOR1 = 傳感器1
 TITLE_SENSOR2 = 傳感器2
@@ -278,53 +278,53 @@ TITLE_SENSOR2_1 = 傳感器2-1
 [SENSOR DIAGNOSIS DETECTION]
 BTN_TOOLTIP_ZOOM_IN = 放大
 BTN_TOOLTIP_ZOOM_OUT = 縮小
-BTN_TOOLTIP_RESET_ZOOM = 調整
+BTN_TOOLTIP_RESET_ZOOM = 对齐
 TEXT_SENSOR1_GRAPH_LEFT = 左下端
 TEXT_SENSOR1_GRAPH_RIGHT = 右上端
 TEXT_SENSOR2_GRAPH_LEFT = 左上端
 TEXT_SENSOR2_GRAPH_RIGHT = 右下端
 
 [SENSOR DIAGNOSIS SIDEVIEW]
-TEXT_NO_IMAGE = 没有影像
+TEXT_NO_IMAGE = 没有视频
 BTN_CAPTION_SNAPSHOT = 快照
 
 [SOFTKEY SETTING]
-TEXT_TITLE = 
-TEXT_HEADER_NUMBER = 
-TEXT_HEADER_TYPE = 
-TEXT_HEADER_ACTION = 
-TEXT_ITEM_KEY = 
-TEXT_ITEM_STATE = 
-TEXT_ITEM_NOT_USED = 
-TEXT_ITEM_CALIBRATION = 
-TEXT_ITEM_TOUCH = 
+TEXT_TITLE = 功能键设置
+TEXT_HEADER_NUMBER = 号码
+TEXT_HEADER_TYPE = 分类
+TEXT_HEADER_ACTION = 行動
+TEXT_ITEM_KEY = 關鍵
+TEXT_ITEM_STATE = 状态
+TEXT_ITEM_NOT_USED = (不使用）
+TEXT_ITEM_CALIBRATION = 进入/退出传感器坐标校正
+TEXT_ITEM_TOUCH = 启用/禁用触摸屏
 
 [TRAYICON]
 TEXT_MENU_OPEN = 打開...
 TEXT_MENU_EXIT = 退出
-TEXT_BALLOONTIP_TITLE = 
-TEXT_BALLOONTIP_MSG = 
+TEXT_BALLOONTIP_TITLE = T3k 配置
+TEXT_BALLOONTIP_MSG = T3k工厂配置版程序("T3kCfgFE.exe")运行中
 
 [ASSISTANCE]
-TITLE_SENSOR_STATUS = 
-TITLE_REMOTE = 
-TEXT_SELECT_SERVER = 
-TEXT_PORT = 
-TEXT_USERNAME = 
-BTN_REQUEST = 
-TEXT_RECONNECTING = 
-BTN_CANCEL = 
-TEXT_CONNECTING = 
-TEXT_REMOTE_CONTROL = 
-BTN_DISCONNECT = 
-TEXT_WAIT_MSG = 
-TEXT_REPAIRCONNECTION = 
-TEXT_ID = 
-TEXT_SERV_NOT_RES = 
-TITLE_CHAT = 
-BTN_SEND = 
-MSG_CHAT_DISCONNECTED = 
-TITLE_REMOTE_MSG = 
-MSG_REMOTE_DISCONNECT = 
-TEXT_HELP_MSG = 
-TEXT_HELP_ARROW = 
+TITLE_SENSOR_STATUS = 传感器状态
+TITLE_REMOTE = 远程控制
+TEXT_SELECT_SERVER = 选择服务器
+TEXT_PORT = 端口
+TEXT_USERNAME = 用户名
+BTN_REQUEST = 邀请
+TEXT_RECONNECTING = 重新连接到服务器... %1
+BTN_CANCEL = 取消
+TEXT_CONNECTING = 连接中
+TEXT_REMOTE_CONTROL = 远程控制中
+BTN_DISCONNECT =  断开连接
+TEXT_WAIT_MSG = 等待管理员的连接
+TEXT_REPAIRCONNECTION = 远程控制断开。\r\n等待管理员的连接
+TEXT_ID = ID: %1
+TEXT_SERV_NOT_RES = 服务器没有响应
+TITLE_CHAT = 聊天窗口
+BTN_SEND = 发送
+MSG_CHAT_DISCONNECTED = 断开连接
+TITLE_REMOTE_MSG = 确认断开
+MSG_REMOTE_DISCONNECT = 目前连接服务器状态。确定断开连接吗?
+TEXT_HELP_MSG = 触摸在屏幕上出现的标识中心
+TEXT_HELP_ARROW = 触摸屏幕上出现的箭头
