--- a/T3kCfg/Languages/chineseSimplified.txt
+++ b/T3kCfg/Languages/chineseSimplified.txt
@@ -5,32 +5,32 @@ TITLE_GENERAL_ERROR = 错误
 
 BTN_CAPTION_EXIT = 退出
 BTN_CAPTION_CLOSE = 关闭
-BTN_CAPTION_DEFAULT = 缺省
-BTN_CAPTION_REFRESH = 更新
+BTN_CAPTION_DEFAULT = 默认值
+BTN_CAPTION_REFRESH = 刷新
 MENU_TOOLTIP_START_PAGE = 起始页
 MENU_TOOLTIP_MOUSE = 手势
 MENU_TOOLTIP_CALIBRATION = 校准
 MENU_TOOLTIP_SENSOR_SETTING = 传感器设置
-MENU_TOOLTIP_GENERAL_SETTING = 一般设置
-MENU_TOOLTIP_SOFTKEY_SETTING = 
-MSGBOX_TITLE_DEFAULT = 变更缺省值
-MSGBOX_TEXT_DEFAULT = 恢复到最初缺省吗？
-MSGBOX_TEXT_INVALID_FIRMWARE_VERSION = 无效的固件版本。\n当前固件版本: %1\n支持固件版本: %2 ~ %3
+MENU_TOOLTIP_GENERAL_SETTING = 常规设置
+MENU_TOOLTIP_SOFTKEY_SETTING = 功能键设置
+MSGBOX_TITLE_DEFAULT = 返回到默认
+MSGBOX_TEXT_DEFAULT = 恢复到原来的设置吗？
+MSGBOX_TEXT_INVALID_FIRMWARE_VERSION = 这个程序不支持v%1固件.当前固件版本是\n: %1,支持固件版本是\n: %2 ~ %3
 MSGBOX_TITLE_INVALID_FIRMWARE_VERSION = 确认错误
 TITLE_CAPTION_INFORMATION = 程序信息
 TITLE_CAPTION_FIRMWARE = 固件信息
-TEXT_DEVICE_NOT_CONNECTED = 没有连接设备
+TEXT_DEVICE_NOT_CONNECTED = 设备未连接
 TEXT_FIRMWARE_DOWNLOAD = 下载固件
 
-TITLE_CAPTION_LICENSE = 
+TITLE_CAPTION_LICENSE = 关于
 
 [SELECT DEVICE]
 WINDOW_CAPTION = 选择设备
-TITLE_CAPTION_DEVICE_LIST = 设备目录
+TITLE_CAPTION_DEVICE_LIST = 设备列表
 TEXT_DEV_PATH = 路径
-TEXT_MODEL = 
-TEXT_NUMBER = 
-BTN_CAPTION_PLAY_BUZZER = 播放蜂音器
+TEXT_MODEL = 型号
+TEXT_NUMBER = 序列号
+BTN_CAPTION_PLAY_BUZZER = 播放蜂鸣器
 BTN_CAPTION_SELECT = 选择设备
 
 [MESSAGEBOX]
@@ -41,18 +41,18 @@ BTN_CAPTION_NO = 否
 
 [START PAGE]
 BTN_CAPTION_MOUSE = 手势
-BTN_CAPTION_MOUSE_SUB1 = 设定触摸手势
-BTN_CAPTION_MOUSE_SUB2 = 设定手势轮廓
-BTN_CAPTION_CALIBRATION = 校准触摸屏
-BTN_CAPTION_CALIBRATION_SUB1 = 校准触摸屏工具
+BTN_CAPTION_MOUSE_SUB1 = 触摸手势设置
+BTN_CAPTION_MOUSE_SUB2 = 手势配置文件
+BTN_CAPTION_CALIBRATION = 触摸坐标更正
+BTN_CAPTION_CALIBRATION_SUB1 = 触摸坐标更正工具
 BTN_CAPTION_CALIBRATION_SUB2 = 
 BTN_CAPTION_SENSOR_SETTING = 传感器设置
-BTN_CAPTION_SENSOR_SETTING_SUB1 = 触摸屏有效/无效
-BTN_CAPTION_SENSOR_SETTING_SUB2 = 设定声音，快捷键
-BTN_CAPTION_GENERAL_SETTING = 一般设置
-BTN_CAPTION_GENERAL_SETTING_SUB1 = 设定语言, 输入模式
+BTN_CAPTION_SENSOR_SETTING_SUB1 = 启用/禁用触摸
+BTN_CAPTION_SENSOR_SETTING_SUB2 = 声音、快捷键设置
+BTN_CAPTION_GENERAL_SETTING = 常规设置
+BTN_CAPTION_GENERAL_SETTING_SUB1 = 语言、输入模式
 BTN_CAPTION_GENERAL_SETTING_SUB2 = 显示方向
-BTN_CAPTION_REMOTE_ASSISTANCE = 远程支持
+BTN_CAPTION_REMOTE_ASSISTANCE = 远程协助
 BTN_CAPTION_REMOTE_ASSISTANCE_SUB1 = 
 BTN_CAPTION_REMOTE_ASSISTANCE_SUB2 = 
 BTN_CAPTION_SOFTKEY_SETTING = Softkey
@@ -61,23 +61,23 @@ BTN_CAPTION_SOFTKEY_SETTING_SUB2 =
 
 [MOUSE SETTING]
 TITLE_CAPTION_MOUSE_BUTTON_MAPPING = 触摸手势
-BTN_CAPTION_TOUCH_SETTING = 设定触摸...
+BTN_CAPTION_TOUCH_SETTING = 触摸设置...
 
-;TEXT_SINGLE = 单手
-;TEXT_FINGERS = 手指
+;TEXT_SINGLE = 单指
+;TEXT_FINGERS = 多指
 ;TEXT_PALM = 手掌
 ;TEXT_PUTNTAP = Put&Tap
 ;TEXT_DRAG = 拖动
-;TEXT_TAP = 敲
-;TEXT_DOUBLE_TAP = 敲两次(快速连续按两次按钮)
+;TEXT_TAP = 单击
+;TEXT_DOUBLE_TAP = 双击
 ;TEXT_LONG_TAP = 长时间按按钮
 ;TEXT_ROTATE = 旋转
 ;TEXT_ZOOM = 放大/缩小
 TEXT_MOVE_WITH_ZOOM = 移动中可放大/缩小
 TEXT_INERTIAL_WHEEL = 惯性论
 TEXT_INDIVIDUAL_PUTNTAP_DOUBLE_TAP = 单独执行 Put&Tap与 Put&Double-Tap
-TEXT_PUTAND_ON_MULTITOUCHDEVICE = 
-TEXT_MAC_OS_MARGIN = 
+TEXT_PUTAND_ON_MULTITOUCHDEVICE = 在多点触摸模式下使用手势识别
+TEXT_MAC_OS_MARGIN = Mac OS X 的边缘
 TEXT_INVERT_WHEEL = 反转轮
 
 TEXT_LEFT = 左
@@ -86,14 +86,14 @@ TEXT_MIDDLE = 中间
 TEXT_DOUBLE_CLICK = 双击
 TEXT_CLICK = 单击
 
-TEXT_PROFILE_LEGEND_MODE1 = 
-TEXT_PROFILE_LEGEND_MODE2 = 
+TEXT_PROFILE_LEGEND_MODE1 = Mouse
+TEXT_PROFILE_LEGEND_MODE2 = Windows 7
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = 编辑项目
 TEXT_PROFILE_ITEM = 项目
 TEXT_ACTION = 动作
-TEXT_USER_DEFINE_KEY = 用户定义的键盘
+TEXT_USER_DEFINE_KEY = 用户定义键
 TEXT_KEY = 键盘
 TEXT_FUNCTION_KEY = 功能键
 TEXT_NONE = 没有
@@ -108,50 +108,50 @@ TEXT_PROFILE_ITEM_MOUSE =
 TEXT_PROFILE_ITEM_ESCAPE = 
 TEXT_PROFILE_ITEM_FORWARD = 向前
 TEXT_PROFILE_ITEM_BACK = 向后
-TEXT_PROFILE_ITEM_TASK_SWITCH1 = 转换1工作窗
-TEXT_PROFILE_ITEM_TASK_SWITCH2 = 转换2工作窗
-TEXT_PROFILE_ITEM_TASK_MANAGER = 工作管理员
-TEXT_PROFILE_ITEM_EXPLORER = 执行资源管理器
-TEXT_PROFILE_ITEM_DESKTOP = 显示桌面
-TEXT_PROFILE_ITEM_VKBOARD = 
-TEXT_PROFILE_ITEM_T3KCFG = 
+TEXT_PROFILE_ITEM_TASK_SWITCH1 = 任务切换器
+TEXT_PROFILE_ITEM_TASK_SWITCH2 = 任务切换器（Aero）
+TEXT_PROFILE_ITEM_TASK_MANAGER = 任务管理器
+TEXT_PROFILE_ITEM_EXPLORER = 探险者
+TEXT_PROFILE_ITEM_DESKTOP = 桌面
+TEXT_PROFILE_ITEM_VKBOARD = 虚拟键盘
+TEXT_PROFILE_ITEM_T3KCFG = T3k系列配置程序
 
-TEXT_PROFILE_ITEM_MLEFT_CLICK = 
-TEXT_PROFILE_ITEM_MRIGHT_CLICK = 
-TEXT_PROFILE_ITEM_MMIDDLE_CLICK = 
-TEXT_PROFILE_ITEM_MLEFT_DOWN = 
-TEXT_PROFILE_ITEM_MRIGHT_DOWN = 
-TEXT_PROFILE_ITEM_MMIDDLE_DOWN = 
+TEXT_PROFILE_ITEM_MLEFT_CLICK = 点击左键
+TEXT_PROFILE_ITEM_MRIGHT_CLICK = 点击右键
+TEXT_PROFILE_ITEM_MMIDDLE_CLICK = 点击中键
+TEXT_PROFILE_ITEM_MLEFT_DOWN = 左键
+TEXT_PROFILE_ITEM_MRIGHT_DOWN = 右键
+TEXT_PROFILE_ITEM_MMIDDLE_DOWN = 中间按钮
 
 [CALIBRATION SETTING]
 TITLE_CAPTION_CALIBRATION = 校准
 TEXT_SCREEN_MARGIN = 屏幕边缘
 TEXT_SCREEN_PERCENT_OF_SCREEN = %
-TEXT_CALIBRATE = 校准
-BTN_CAPTION_CALIBRATE = 校准...
+TEXT_CALIBRATE = 校正
+BTN_CAPTION_CALIBRATE = 校正…                                                      
 
-TITLE_AREA_SETTING = 设定领域(%)
+TITLE_AREA_SETTING = 区域设置（%）
 TEXT_SINGLE_CLICK = 单击
 TEXT_DOUBLE_CLICK = 双击
 ;TEXT_TWO_TOUCH = Put & Tap
 TEXT_PALM = 手掌
 
-TEXT_CALIBRATION_WARNING = 
-TEXT_CALIBRATION_WARNING2 = 
+TEXT_CALIBRATION_WARNING = “Mac OS X的边缘 ”在“手势”菜单里没有设置成功。 校正无法正常工作。
+TEXT_CALIBRATION_WARNING2 = “Mac OS X的边缘 ”在“手势”菜单里设置成功。 校正无法正常工作。
 
 [SETTING]
-TITLE_CAPTION_TOUCH_ENABLE = 是否使用触摸
+TITLE_CAPTION_TOUCH_ENABLE = 打开/关闭触摸屏
 TEXT_TOUCH_ENABLE = 使用触摸
-TEXT_RADIO_TOUCH_ENABLE = 有效
-TEXT_RADIO_TOUCH_DISABLE = 无效
+TEXT_RADIO_TOUCH_ENABLE = 启用
+TEXT_RADIO_TOUCH_DISABLE = 不启用                                             
 
-TITLE_CAPTION_BUZZER = 警报蜂鸣声
+TITLE_CAPTION_BUZZER = 蜂鸣器
 TEXT_CLICK = 单击
 TEXT_CALIBRATION = 校准
 TEXT_ERROR = 错误
 TEXT_KEYTONE = 键盘音
 TEXT_SENSOR_ATTACH = 通知传感器的连接
-TEXT_PEN_PAIRING = Pen pairing
+TEXT_PEN_PAIRING = 笔配对
 TEXT_USB_ATTACH = 通知USB连接
 
 TITLE_SHORTCUT_KEY = 快捷键
@@ -163,19 +163,19 @@ TEXT_NOT_USED = 不使用
 TEXT_ON = 开机
 TEXT_OFF = 关闭
 
-TITLE_TRAY_ICON = Tray Icon
-TEXT_CHECK_TRAYICON = 使用托盘图标（Tray Icon）
+TITLE_TRAY_ICON = 任务栏图标
+TEXT_CHECK_TRAYICON = 使用任务栏图标
 
-TITLE_CAPTION_TOUCH_INPUT_MODE = 输入模式
+TITLE_CAPTION_TOUCH_INPUT_MODE = 触摸输入模式
 TEXT_INPUT_MODE = 输入模式
 TEXT_INPUT_MODE_MOUSE = 鼠标
-TEXT_INPUT_MODE_SINGLE_TOUCH = 单点触摸输入 (Tablet Pen)
-TEXT_INPUT_MODE_MULTI_TOUCH = 多点触摸输入
+TEXT_INPUT_MODE_SINGLE_TOUCH = 单点触摸 (Tablet Pen)
+TEXT_INPUT_MODE_MULTI_TOUCH = 多点触摸
 TEXT_INPUT_MODE_AUTO_SELECT = 自动选择
-TEXT_INPUT_MODE_WARNING_MSG = 触摸可能无法正常工作在其他操作系统。继续吗？
+TEXT_INPUT_MODE_WARNING_MSG = 在其他操作系统觸摸可能無法正常工作。要繼續嗎？
 
-TITLE_MULTI_MONITOR = 设定多显示器
-TEXT_MULTI_MONITOR = 设定显示器
+TITLE_MULTI_MONITOR = 多显示器显示设置
+TEXT_MULTI_MONITOR = 显示器设置
 TEXT_MULTI_MONITOR_SETTING = 选择显示器...
 
 TEXT_BTN_MULTI_MONITOR_APPLY = 运用
@@ -188,87 +188,87 @@ BTN_TOOLTIP_PLAY = 播放
 
 BTN_CAMERA_DIAGNOSTICS = 诊断传感器...
 
-TITLE_LANGUAGE = 设定语言(Language)
+TITLE_LANGUAGE = 语言
 TEXT_LANGUAGE = 选择语言
 TEXT_LANGUAGE_NOT_FOUND = 语言文件不存在
 
 TITLE_DISPLAY_ORIENTATION = 显示方向
 TEXT_DISPLAY_ORIENTATION = 方向
-TEXT_DISPLAY_ORIENTATION_1 = 0' - 景观
-TEXT_DISPLAY_ORIENTATION_2 = 90' - 肖像
-TEXT_DISPLAY_ORIENTATION_3 = 180' - 景观 (翻转)
-TEXT_DISPLAY_ORIENTATION_4 = 270' - 肖像 (翻转)
+TEXT_DISPLAY_ORIENTATION_1 = 0' - 横向
+TEXT_DISPLAY_ORIENTATION_2 = 0' - 竖向
+TEXT_DISPLAY_ORIENTATION_3 = 180' - 横向 (翻轉)
+TEXT_DISPLAY_ORIENTATION_4 = 270' - 竖向  (翻转)
 
-TEXT_DISPLAY_X11_ORIENTATION_1 = 
-TEXT_DISPLAY_X11_ORIENTATION_2 = 
-TEXT_DISPLAY_X11_ORIENTATION_3 = 
-TEXT_DISPLAY_X11_ORIENTATION_4 = 
+TEXT_DISPLAY_X11_ORIENTATION_1 = 0' - 正常
+TEXT_DISPLAY_X11_ORIENTATION_2 = 90' - 左边
+TEXT_DISPLAY_X11_ORIENTATION_3 = 180' - 右边
+TEXT_DISPLAY_X11_ORIENTATION_4 = 270' - 颠倒
 
-TEXT_DISPLAY_MAC_ORIENTATION_1 = 
-TEXT_DISPLAY_MAC_ORIENTATION_2 = 
-TEXT_DISPLAY_MAC_ORIENTATION_3 = 
-TEXT_DISPLAY_MAC_ORIENTATION_4 = 
+TEXT_DISPLAY_MAC_ORIENTATION_1 = 0'
+TEXT_DISPLAY_MAC_ORIENTATION_2 = 90'
+TEXT_DISPLAY_MAC_ORIENTATION_3 = 180'
+TEXT_DISPLAY_MAC_ORIENTATION_4 = 270'
 
 TITLE_DISPLAY_WARNING = 警告
 TEXT_DISPLAY_WARNING = 当前显示的方向和校准值不符合
 
 [TOUCH SETTING]
-WINDOW_CAPTION = 设定触摸
-TITLE_TIME_SETTING = 设定时间(ms)
+WINDOW_CAPTION = 触摸设置
+TITLE_TIME_SETTING = 时间设置（ms）
 TEXT_TAP = 按
 TEXT_LONG_TAP = 长时间按按钮
 TEXT_SLOW = 慢
 TEXT_FAST = 快
-TITLE_WHEEL_SENSITIVITY_SETTING = 放大/缩小鼠标滚轮,设定敏感度
+TITLE_WHEEL_SENSITIVITY_SETTING = 放大/缩小鼠标滚轮,灵敏度设置
 TEXT_WHEEL = 鼠标滚轮
 TEXT_ZOOM = 放大/缩小
 
-BTN_CAPTION_DEFAULT = 缺省
-BTN_CAPTION_REFRESH = 更新
+BTN_CAPTION_DEFAULT = 默认值
+BTN_CAPTION_REFRESH = 刷新
 BTN_CAPTION_CLOSE = 关闭
-MSGBOX_TEXT_DEFAULT = 恢复到最初缺省吗？
-MSGBOX_TITLE_DEFAULT = 变更缺省值
+MSGBOX_TEXT_DEFAULT = 恢复到原来的设置吗?
+MSGBOX_TITLE_DEFAULT = 确认原来的设置
 
 [CHECK TOUCH DISABLE]
-TITLE_CAPTION = 确认触摸无效
-TEXT_MESSAGE = 触摸无效时,需要鼠标。\n请用鼠标按下键。
+TITLE_CAPTION = 确认关闭触摸
+TEXT_MESSAGE = 關閉觸摸時需要鼠標。\n请用鼠標点击下面按鍵
 BTN_TIMER_TEXT = %1 秒
 
 [WARNING SENSOR DIAGNOSIS]
 TITLE_CAPTION = 警告
-TEXT_MESSAGE = 警告！下次屏幕上，包含诊断传感器状态的设定值。\n\n若变更设定值，传感器可能会不稳定动作。
+TEXT_MESSAGE = 警告！下一个画面包含，为了诊断传感器状态的设置数据。\n\n如果变更设置数据，触摸屏无法正常工作。
 BTN_CAPTION_CONTINUE = 继续
 BTN_CAPTION_CLOSE = 关闭
 
 [INFORMATION GATHERING]
-TITLE_CAPTION = 
-TEXT_MESSAGE = 
-BTN_CAPTION_CONTINUE = 
-BTN_CAPTION_CLOSE = 
+TITLE_CAPTION = 同意
+TEXT_MESSAGE = 下一个画面收集传感器信息和使用者环境（操作系统版本，在MS Windows Tablet輸入服務, 屏幕分辨率）
+BTN_CAPTION_CONTINUE = 同意
+BTN_CAPTION_CLOSE = 拒绝
 
 [SENSOR DIAGNOSIS]
 TITLE_CAPTION = 传感器诊断工具
-BTN_CAPTION_DEFAULT = 缺省
-BTN_CAPTION_REFRESH = 更新
+BTN_CAPTION_DEFAULT = 默认值
+BTN_CAPTION_REFRESH = 刷新
 BTN_CAPTION_CLOSE = 关闭
-BTN_CAPTION_SAVELOG = 
-BTN_CAPTION_MAIN = 
-BTN_CAPTION_SUB = 
+BTN_CAPTION_SAVELOG = 保存传感器状态
+BTN_CAPTION_MAIN = 主
+BTN_CAPTION_SUB = 副
 TAB_CAPTION_SIDEVIEW = 侧视图
 TAB_CAPTION_DETECTION = 检测图
 
-LOG_CAPTION_ERROR = 
-LOG_SIDEVIEW = 
-LOG_DETECTION = 
-LOG_DATA = 
-LOG_SAVING = 
-LOG_LOADING = 
-LOG_COMPLETE = 
-LOG_OK = 
-LOG_FAIL = 
-LOG_PROGRESS = 
-LOG_START = 
-LOG_CAMERA = 
+LOG_CAPTION_ERROR = 错误！保存失败
+LOG_SIDEVIEW = 侧视图
+LOG_DETECTION = 检测
+LOG_DATA = 设置数据
+LOG_SAVING = 保存中
+LOG_LOADING = 加载中
+LOG_COMPLETE = 完成
+LOG_OK = 确认
+LOG_FAIL = 失败
+LOG_PROGRESS = 进行
+LOG_START = 开始
+LOG_CAMERA = 相机
 
 TITLE_SENSOR1 = 传感器1
 TITLE_SENSOR2 = 传感器2
@@ -278,53 +278,53 @@ TITLE_SENSOR2_1 = 传感器2-1
 [SENSOR DIAGNOSIS DETECTION]
 BTN_TOOLTIP_ZOOM_IN = 放大
 BTN_TOOLTIP_ZOOM_OUT = 缩小
-BTN_TOOLTIP_RESET_ZOOM = 调整
+BTN_TOOLTIP_RESET_ZOOM = 对齐
 TEXT_SENSOR1_GRAPH_LEFT = 左下端
 TEXT_SENSOR1_GRAPH_RIGHT = 右上端
 TEXT_SENSOR2_GRAPH_LEFT = 左上端
 TEXT_SENSOR2_GRAPH_RIGHT = 右下端
 
 [SENSOR DIAGNOSIS SIDEVIEW]
-TEXT_NO_IMAGE = 没有影像
+TEXT_NO_IMAGE = 没有视频
 BTN_CAPTION_SNAPSHOT = 快照
 
 [SOFTKEY SETTING]
-TEXT_TITLE = 
-TEXT_HEADER_NUMBER = 
-TEXT_HEADER_TYPE = 
-TEXT_HEADER_ACTION = 
-TEXT_ITEM_KEY = 
-TEXT_ITEM_STATE = 
-TEXT_ITEM_NOT_USED = 
-TEXT_ITEM_CALIBRATION = 
-TEXT_ITEM_TOUCH = 
+TEXT_TITLE = 功能键设置
+TEXT_HEADER_NUMBER = 号码
+TEXT_HEADER_TYPE = 分类
+TEXT_HEADER_ACTION = 行动
+TEXT_ITEM_KEY = 关键
+TEXT_ITEM_STATE = 状态
+TEXT_ITEM_NOT_USED = (不使用）
+TEXT_ITEM_CALIBRATION = 进入/退出传感器坐标校正
+TEXT_ITEM_TOUCH = 启用/禁用触摸屏
 
 [TRAYICON]
 TEXT_MENU_OPEN = 打开...
 TEXT_MENU_EXIT = 退出
-TEXT_BALLOONTIP_TITLE = 
-TEXT_BALLOONTIP_MSG = 
+TEXT_BALLOONTIP_TITLE = T3k 配置
+TEXT_BALLOONTIP_MSG = T3k工厂配置版程序("T3kCfgFE.exe")运行中
 
 [ASSISTANCE]
-TITLE_SENSOR_STATUS = 
-TITLE_REMOTE = 
-TEXT_SELECT_SERVER = 
-TEXT_PORT = 
-TEXT_USERNAME = 
-BTN_REQUEST = 
-TEXT_RECONNECTING = 
-BTN_CANCEL = 
-TEXT_CONNECTING = 
-TEXT_REMOTE_CONTROL = 
-BTN_DISCONNECT = 
-TEXT_WAIT_MSG = 
-TEXT_REPAIRCONNECTION = 
-TEXT_ID = 
-TEXT_SERV_NOT_RES = 
-TITLE_CHAT = 
-BTN_SEND = 
-MSG_CHAT_DISCONNECTED = 
-TITLE_REMOTE_MSG = 
-MSG_REMOTE_DISCONNECT = 
-TEXT_HELP_MSG = 
-TEXT_HELP_ARROW = 
+TITLE_SENSOR_STATUS = 传感器状态
+TITLE_REMOTE = 远程控制
+TEXT_SELECT_SERVER = 选择服务器
+TEXT_PORT = 端口
+TEXT_USERNAME = 用户名
+BTN_REQUEST = 邀请
+TEXT_RECONNECTING = 重新连接到服务器... %1
+BTN_CANCEL = 取消
+TEXT_CONNECTING = 连接中
+TEXT_REMOTE_CONTROL = 远程控制中
+BTN_DISCONNECT =  断开连接
+TEXT_WAIT_MSG = 等待管理员的连接
+TEXT_REPAIRCONNECTION = 远程控制断开。等待管理员的连接
+TEXT_ID = ID: %1
+TEXT_SERV_NOT_RES = 服务器没有响应
+TITLE_CHAT = 聊天窗口
+BTN_SEND = 发送
+MSG_CHAT_DISCONNECTED = 断开连接
+TITLE_REMOTE_MSG = 确认断开
+MSG_REMOTE_DISCONNECT = 目前连接服务器状态。确定断开连接吗?
+TEXT_HELP_MSG = 触摸在屏幕上出现的标识中心
+TEXT_HELP_ARROW = 触摸屏幕上出现的箭头
