--- a/T3kCfg/Languages/portuguese.txt
+++ b/T3kCfg/Languages/portuguese.txt
@@ -12,7 +12,7 @@ MENU_TOOLTIP_MOUSE = Gesto
 MENU_TOOLTIP_CALIBRATION = Calibração
 MENU_TOOLTIP_SENSOR_SETTING = Configurações do sensor
 MENU_TOOLTIP_GENERAL_SETTING = Configurações gerais
-MENU_TOOLTIP_SOFTKEY_SETTING = 
+MENU_TOOLTIP_SOFTKEY_SETTING = Softkey fixação
 MSGBOX_TITLE_DEFAULT = Mudar para o padrão
 MSGBOX_TEXT_DEFAULT = Restaurar todas para as configurações originais?
 MSGBOX_TEXT_INVALID_FIRMWARE_VERSION = Versão do firmware inválida, ₩n actual: %1,\nsuporte: %2 ~ %3
@@ -22,25 +22,25 @@ TITLE_CAPTION_FIRMWARE = Informações sobre o firmware
 TEXT_DEVICE_NOT_CONNECTED = O dispositivo não está conectado.
 TEXT_FIRMWARE_DOWNLOAD = Firmware descarregado
 
-TITLE_CAPTION_LICENSE = 
+TITLE_CAPTION_LICENSE = Sobre
 
 [SELECT DEVICE]
 WINDOW_CAPTION = Selecionar dispositivo
 TITLE_CAPTION_DEVICE_LIST = Lista dos dispositivos
 TEXT_DEV_PATH = Caminho do dispositivo
-TEXT_MODEL = 
-TEXT_NUMBER = 
+TEXT_MODEL = Modelo
+TEXT_NUMBER = número
 BTN_CAPTION_PLAY_BUZZER = Tocar campainha
 BTN_CAPTION_SELECT = Selecionar
 
 [MESSAGEBOX]
-BTN_CAPTION_OK = e OK
-BTN_CAPTION_CANCEL = e Cancelar
-BTN_CAPTION_YES = e sim
-BTN_CAPTION_NO = e não
+BTN_CAPTION_OK = OK
+BTN_CAPTION_CANCEL = Cancelar
+BTN_CAPTION_YES = Sim
+BTN_CAPTION_NO = Não
 
 [START PAGE]
-BTN_CAPTION_MOUSE = gesto
+BTN_CAPTION_MOUSE = Gesto
 BTN_CAPTION_MOUSE_SUB1 = Toque em Configurações Gesto
 BTN_CAPTION_MOUSE_SUB2 = Perfis gesto
 BTN_CAPTION_CALIBRATION = Calibração
@@ -76,9 +76,9 @@ BTN_CAPTION_TOUCH_SETTING = Configurações do toque...
 TEXT_MOVE_WITH_ZOOM = Mover com zoom
 TEXT_INERTIAL_WHEEL = Roda de inércia
 TEXT_INDIVIDUAL_PUTNTAP_DOUBLE_TAP = Por e pontar indivisualmente, por e pontar doplamente
-TEXT_PUTAND_ON_MULTITOUCHDEVICE = 
-TEXT_MAC_OS_MARGIN = 
-TEXT_INVERT_WHEEL = inverter Roda
+TEXT_PUTAND_ON_MULTITOUCHDEVICE = Híbrido Multi-Touch
+TEXT_MAC_OS_MARGIN = Mac OS X Margem
+TEXT_INVERT_WHEEL = Inverter Roda
 
 TEXT_LEFT = Esquerdo
 TEXT_RIGHT = Direito
@@ -86,8 +86,8 @@ TEXT_MIDDLE = Meio
 TEXT_DOUBLE_CLICK = Clique duplo
 TEXT_CLICK = Clicar
 
-TEXT_PROFILE_LEGEND_MODE1 = 
-TEXT_PROFILE_LEGEND_MODE2 = 
+TEXT_PROFILE_LEGEND_MODE1 = Mouse
+TEXT_PROFILE_LEGEND_MODE2 = Windows 7
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Editar ações
@@ -104,8 +104,8 @@ BTN_CAPTION_CANCEL = Cancelar
 TEXT_PROFILE_ITEM_DISABLED = (Desativado)
 TEXT_PROFILE_ITEM_USER_DEFINED = (definido por usuário)
 TEXT_PROFILE_ITEM_FUNCTION_KEY = (Tecla de função)
-TEXT_PROFILE_ITEM_MOUSE = 
-TEXT_PROFILE_ITEM_ESCAPE = 
+TEXT_PROFILE_ITEM_MOUSE = (Mouse)
+TEXT_PROFILE_ITEM_ESCAPE = Escape (Esc)
 TEXT_PROFILE_ITEM_FORWARD = À frente
 TEXT_PROFILE_ITEM_BACK = De volta
 TEXT_PROFILE_ITEM_TASK_SWITCH1 = Interruptor de tarefa 1
@@ -113,15 +113,15 @@ TEXT_PROFILE_ITEM_TASK_SWITCH2 = Interruptor de tarefa 2
 TEXT_PROFILE_ITEM_TASK_MANAGER = Gerenciador de tarefas
 TEXT_PROFILE_ITEM_EXPLORER = Explorador
 TEXT_PROFILE_ITEM_DESKTOP = Papel de parede
-TEXT_PROFILE_ITEM_VKBOARD = 
-TEXT_PROFILE_ITEM_T3KCFG = 
+TEXT_PROFILE_ITEM_VKBOARD = Teclado Virtual
+TEXT_PROFILE_ITEM_T3KCFG = T3k Programa de Configuração Series
 
-TEXT_PROFILE_ITEM_MLEFT_CLICK = 
-TEXT_PROFILE_ITEM_MRIGHT_CLICK = 
-TEXT_PROFILE_ITEM_MMIDDLE_CLICK = 
-TEXT_PROFILE_ITEM_MLEFT_DOWN = 
-TEXT_PROFILE_ITEM_MRIGHT_DOWN = 
-TEXT_PROFILE_ITEM_MMIDDLE_DOWN = 
+TEXT_PROFILE_ITEM_MLEFT_CLICK = Clique esquerdo
+TEXT_PROFILE_ITEM_MRIGHT_CLICK = Clique Direito
+TEXT_PROFILE_ITEM_MMIDDLE_CLICK = Clique Meio
+TEXT_PROFILE_ITEM_MLEFT_DOWN = Botão Esquerdo
+TEXT_PROFILE_ITEM_MRIGHT_DOWN = Botão Direito
+TEXT_PROFILE_ITEM_MMIDDLE_DOWN = Botão  Meio
 
 [CALIBRATION SETTING]
 TITLE_CAPTION_CALIBRATION = Calibração
@@ -136,8 +136,8 @@ TEXT_DOUBLE_CLICK = Clique duplo
 ;TEXT_TWO_TOUCH = Por e pontar
 TEXT_PALM = Palma da mão
 
-TEXT_CALIBRATION_WARNING = 
-TEXT_CALIBRATION_WARNING2 = 
+TEXT_CALIBRATION_WARNING = Didn't check 'Mac OS X Margin' in 'Gesture' menu. Because the calibration may not work properly.
+TEXT_CALIBRATION_WARNING2 = Did check 'Mac OS X Margin' in 'Gesture' menu. Because the calibration may not work properly.
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = Ativar / desativar o toque
@@ -190,7 +190,7 @@ BTN_CAMERA_DIAGNOSTICS = Verificar o sensor...
 
 TITLE_LANGUAGE = Configuração de língua(Language)
 TEXT_LANGUAGE = Selecionar a língua
-TEXT_LANGUAGE_NOT_FOUND = 
+TEXT_LANGUAGE_NOT_FOUND = Arquivo de idioma não existe.
 
 TITLE_DISPLAY_ORIENTATION = Orientação de exibição
 TEXT_DISPLAY_ORIENTATION = orientação
@@ -199,15 +199,15 @@ TEXT_DISPLAY_ORIENTATION_2 = 90' - retrato
 TEXT_DISPLAY_ORIENTATION_3 = 180' - paisagem (capotou)
 TEXT_DISPLAY_ORIENTATION_4 = 270' - retrato (capotou)
 
-TEXT_DISPLAY_X11_ORIENTATION_1 = 
-TEXT_DISPLAY_X11_ORIENTATION_2 = 
-TEXT_DISPLAY_X11_ORIENTATION_3 = 
-TEXT_DISPLAY_X11_ORIENTATION_4 = 
+TEXT_DISPLAY_X11_ORIENTATION_1 = 0' - Normal
+TEXT_DISPLAY_X11_ORIENTATION_2 = 90' - Esquerda
+TEXT_DISPLAY_X11_ORIENTATION_3 = 180' - Direito
+TEXT_DISPLAY_X11_ORIENTATION_4 = 270' - Flipped
 
-TEXT_DISPLAY_MAC_ORIENTATION_1 = 
-TEXT_DISPLAY_MAC_ORIENTATION_2 = 
-TEXT_DISPLAY_MAC_ORIENTATION_3 = 
-TEXT_DISPLAY_MAC_ORIENTATION_4 = 
+TEXT_DISPLAY_MAC_ORIENTATION_1 = 0'
+TEXT_DISPLAY_MAC_ORIENTATION_2 = 90'
+TEXT_DISPLAY_MAC_ORIENTATION_3 = 180'
+TEXT_DISPLAY_MAC_ORIENTATION_4 = 270'
 
 TITLE_DISPLAY_WARNING = aviso
 TEXT_DISPLAY_WARNING = Orientação de exibição atual e valor de calibração não corresponde
@@ -241,34 +241,34 @@ BTN_CAPTION_CONTINUE = Conitnuar
 BTN_CAPTION_CLOSE = Fechar
 
 [INFORMATION GATHERING]
-TITLE_CAPTION = 
-TEXT_MESSAGE = 
-BTN_CAPTION_CONTINUE = 
-BTN_CAPTION_CLOSE = 
+TITLE_CAPTION = Acordo
+TEXT_MESSAGE = It will be collect the sensor information and the user environment(OS Version, Tablet Input Service on MS Windows, Screen Resolution) on the next screen.
+BTN_CAPTION_CONTINUE = Concordar
+BTN_CAPTION_CLOSE = Rejeitar
 
 [SENSOR DIAGNOSIS]
 TITLE_CAPTION = Diagnóstico do sensor
 BTN_CAPTION_DEFAULT = Padrão
 BTN_CAPTION_REFRESH = Renoar
 BTN_CAPTION_CLOSE = Fechar
-BTN_CAPTION_SAVELOG = 
-BTN_CAPTION_MAIN = 
-BTN_CAPTION_SUB = 
+BTN_CAPTION_SAVELOG = Salvar Estado Sensor
+BTN_CAPTION_MAIN = Principal
+BTN_CAPTION_SUB = Sub
 TAB_CAPTION_SIDEVIEW = Vista lateral
 TAB_CAPTION_DETECTION = Gráfico de detecção
 
-LOG_CAPTION_ERROR = 
-LOG_SIDEVIEW = 
-LOG_DETECTION = 
-LOG_DATA = 
-LOG_SAVING = 
-LOG_LOADING = 
-LOG_COMPLETE = 
-LOG_OK = 
-LOG_FAIL = 
-LOG_PROGRESS = 
-LOG_START = 
-LOG_CAMERA = 
+LOG_CAPTION_ERROR = Erro! não conseguiu salvar o Estado.
+LOG_SIDEVIEW = Sideview
+LOG_DETECTION = Detecção
+LOG_DATA = Fixação Dados
+LOG_SAVING = Salvar
+LOG_LOADING = Carregamento
+LOG_COMPLETE = Completar
+LOG_OK = OK
+LOG_FAIL = FALHA
+LOG_PROGRESS = PRG
+LOG_START = Começar
+LOG_CAMERA = Câmera
 
 TITLE_SENSOR1 = Sensor 1
 TITLE_SENSOR2 = Sensor 2
@@ -289,42 +289,43 @@ TEXT_NO_IMAGE = Nenhuma imagem
 BTN_CAPTION_SNAPSHOT = Tiro rápido
 
 [SOFTKEY SETTING]
-TEXT_TITLE = 
-TEXT_HEADER_NUMBER = 
-TEXT_HEADER_TYPE = 
-TEXT_HEADER_ACTION = 
-TEXT_ITEM_KEY = 
-TEXT_ITEM_STATE = 
-TEXT_ITEM_NOT_USED = 
-TEXT_ITEM_CALIBRATION = 
-TEXT_ITEM_TOUCH = 
+TEXT_TITLE = Softkey fixação
+TEXT_HEADER_NUMBER = número
+TEXT_HEADER_TYPE = Tipo
+TEXT_HEADER_ACTION = Ação
+TEXT_ITEM_KEY = Chave
+TEXT_ITEM_STATE = Estado
+TEXT_ITEM_NOT_USED = (Não Utilizada)
+TEXT_ITEM_CALIBRATION = Entrar / Sair de calibração do sensor
+TEXT_ITEM_TOUCH = Activar / Desactivar Touch Screen
 
 [TRAYICON]
 TEXT_MENU_OPEN = Abrir…
 TEXT_MENU_EXIT = Sair
-TEXT_BALLOONTIP_TITLE = 
-TEXT_BALLOONTIP_MSG = 
+TEXT_BALLOONTIP_TITLE = T3k Configuração
+TEXT_BALLOONTIP_MSG = T3k configuração de fábrica Edição ("T3kCfgFE.exe") está em execução.
 
 [ASSISTANCE]
-TITLE_SENSOR_STATUS = 
-TITLE_REMOTE = 
-TEXT_SELECT_SERVER = 
-TEXT_PORT = 
-TEXT_USERNAME = 
-BTN_REQUEST = 
-TEXT_RECONNECTING = 
-BTN_CANCEL = 
-TEXT_CONNECTING = 
-TEXT_REMOTE_CONTROL = 
-BTN_DISCONNECT = 
-TEXT_WAIT_MSG = 
-TEXT_REPAIRCONNECTION = 
-TEXT_ID = 
-TEXT_SERV_NOT_RES = 
-TITLE_CHAT = 
-BTN_SEND = 
-MSG_CHAT_DISCONNECTED = 
-TITLE_REMOTE_MSG = 
-MSG_REMOTE_DISCONNECT = 
-TEXT_HELP_MSG = 
-TEXT_HELP_ARROW = 
+TITLE_SENSOR_STATUS = Sensor Estado
+TITLE_REMOTE = Controle Remoto
+TEXT_SELECT_SERVER = Selecione Servidor
+TEXT_PORT = Porto
+TEXT_USERNAME = Nome de usuário
+BTN_REQUEST = Pedir
+TEXT_RECONNECTING = Repetir conexão com o servidor ... % 1
+BTN_CANCEL = Cancelar
+TEXT_CONNECTING = Conectando ...
+TEXT_REMOTE_CONTROL = Controle Remoto ...
+BTN_DISCONNECT = Desligar
+TEXT_WAIT_MSG = Aguardando conexão de administrador.
+TEXT_REPAIRCONNECTION = Controle remoto desconecta sessão. 
+\r\nWaiting para a conexão de administrador.
+TEXT_ID = ID: 1%
+TEXT_SERV_NOT_RES = O servidor não está respondendo.
+TITLE_CHAT = Bate-papo
+BTN_SEND = Enviar
+MSG_CHAT_DISCONNECTED = Desconectado.
+TITLE_REMOTE_MSG = Fechar Sessão Remota
+MSG_REMOTE_DISCONNECT = Tem certeza de que deseja desconectar?
+TEXT_HELP_MSG = Por favor, toque centro da marca de cruz.
+TEXT_HELP_ARROW = Por favor, toque a seta.
