--- a/T3kCfg/Languages/korean.txt
+++ b/T3kCfg/Languages/korean.txt
@@ -22,7 +22,7 @@ TITLE_CAPTION_FIRMWARE = 펌웨어(Firmware) 정보
 TEXT_DEVICE_NOT_CONNECTED = 장치가 연결되지 않았습니다.
 TEXT_FIRMWARE_DOWNLOAD = 펌웨어(Firmware) 다운로드 중입니다.
 
-TITLE_CAPTION_LICENSE = 
+TITLE_CAPTION_LICENSE = 대하여
 
 [SELECT DEVICE]
 WINDOW_CAPTION = 장치 선택
@@ -136,8 +136,8 @@ TEXT_DOUBLE_CLICK = 두번 클릭
 ;TEXT_TWO_TOUCH = Put & Tap
 TEXT_PALM = 손바닥
 
-TEXT_CALIBRATION_WARNING = "제스처" 메뉴에서 "Mac OS X 화면 마진"이 설정되지 않았습니다. 보정이 제대로 동작하지 않을 수 있습니다.
-TEXT_CALIBRATION_WARNING2 = "제스처" 메뉴에서 "Mac OS X 화면 마진"이 설정되었습니다. 보정이 제대로 동작하지 않을 수 있습니다.
+TEXT_CALIBRATION_WARNING = 제스처 메뉴에서 "Mac OS X 화면 마진"이 설정되지 않았습니다. 보정이 제대로 동작하지 않을 수 있습니다.
+TEXT_CALIBRATION_WARNING2 = 제스처 메뉴에서 "Mac OS X 화면 마진"이 설정되었습니다. 보정이 제대로 동작하지 않을 수 있습니다.
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = 터치 사용 유무
